objects/Product2.object
<CustomObject>
    <fields>
        <fullName>ACQUIRED_COMPANY_ID__c</fullName>
        <label>Acquired Company ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACQUIRED_FORMAT_ID__c</fullName>
        <label>Acquired Format ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BASE_UM_CDE__c</fullName>
        <label>Base UM Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC1_DESC__c</fullName>
        <inlineHelpText>CBC1 description (not the code) such as Aero Defense, Automotive, CIS</inlineHelpText>
        <label>CBC Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPR_TS__c</fullName>
        <label>CPR Timestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_DRAWING_NBR__c</fullName>
        <label>Customer Drawing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_DRAWING_REVISION_CDE__c</fullName>
        <label>Customer Drawing Revision Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD1_Competency_Code__c</fullName>
        <label>DD1 Competency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD2_Competency_Code__c</fullName>
        <label>DD2 Competency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD3_Competency_Code__c</fullName>
        <label>DD3 Competency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISCONTINUANCE_STATUS_CDE__c</fullName>
        <label>Discontinuance Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DML_TS__c</fullName>
        <label>DML_TS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DML_USER_ID__c</fullName>
        <label>DML_USER_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRAWING_NBR__c</fullName>
        <label>Drawing Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRAWING_REVISION_LETTER_CDE__c</fullName>
        <label>Drawing Revision Letter Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ELV_ROHS_COMPLIANCE_CDE__c</fullName>
        <inlineHelpText>Identifies what the RoHS Compliance level is by code. RoHS is the environmental standards qualifications for EMEA/Asia.</inlineHelpText>
        <label>RoHS Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ENGINEERING_STATUS_CDE__c</fullName>
        <label>Engineering Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENGR_CONTROLLING_ORG_CDE__c</fullName>
        <label>Engineer Controlling Org Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPUP_CDE__c</fullName>
        <label>EPUP Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPL_DESC__c</fullName>
        <inlineHelpText>Global Product Line Short Name</inlineHelpText>
        <label>GPL Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPL__c</fullName>
        <inlineHelpText>Global Product Line Code</inlineHelpText>
        <label>GPL Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Code__c</fullName>
        <label>Industry Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_CPC_TRANSACTION_ID__c</fullName>
        <label>Last CPC Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEADFREE_PROCESS_CAPABLE_CDE__c</fullName>
        <label>Leadfree Process Capable Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MARKETING_BRAND_ID__c</fullName>
        <label>Marketing Brand ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MATERIAL_TYPE_CDE__c</fullName>
        <label>Material Type Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Qty_w_in_Std_Lead_Time__c</fullName>
        <label>Max Qty w/in Std Lead Time</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEW_PRODUCT_IND__c</fullName>
        <inlineHelpText>NPI-Indicates if this is a new TE part</inlineHelpText>
        <label>New Product Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEW_PRODUCT_REASON_CDE__c</fullName>
        <label>New Product Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PART_KEY_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique Identifier for parts.</inlineHelpText>
        <label>Part Key ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PART_RECORD_ORIGINAL_TS__c</fullName>
        <label>Part Record Original Timestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PART_RVS_LETTER_CDE__c</fullName>
        <label>Part RVS Letter Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_CDE__c</fullName>
        <label>Product Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROD_NAME__c</fullName>
        <label>Product Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROMOTE_IND__c</fullName>
        <label>Pomote Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PURCHASING_COMMODITY_CDE__c</fullName>
        <label>Purchasing Commodity Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_Desc__c</fullName>
        <label>Product Line Desc</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADC Krone</fullName>
                </value>
                <value>
                    <fullName>Ampact Range</fullName>
                </value>
                <value>
                    <fullName>Dulmison Insulators</fullName>
                </value>
                <value>
                    <fullName>Dulmison Product</fullName>
                </value>
                <value>
                    <fullName>Guro Resin and Accessories</fullName>
                </value>
                <value>
                    <fullName>High Voltage Cable Accessories</fullName>
                </value>
                <value>
                    <fullName>HV Comp / Axicom</fullName>
                </value>
                <value>
                    <fullName>Identification Labels</fullName>
                </value>
                <value>
                    <fullName>Insulator Range</fullName>
                </value>
                <value>
                    <fullName>Null</fullName>
                </value>
                <value>
                    <fullName>Overhead Distribution - Simel, ALR, Helstern,Tercon</fullName>
                </value>
                <value>
                    <fullName>Over Head Network</fullName>
                </value>
                <value>
                    <fullName>Raychem</fullName>
                </value>
                <value>
                    <fullName>Raysulate</fullName>
                </value>
                <value>
                    <fullName>Surge Arrestors</fullName>
                </value>
                <value>
                    <fullName>TAPPAT</fullName>
                </value>
                <value>
                    <fullName>Underground</fullName>
                </value>
                <value>
                    <fullName>Underground Connectors</fullName>
                </value>
                <value>
                    <fullName>Utilux</fullName>
                </value>
                <value>
                    <fullName>Utilux Cable Ties</fullName>
                </value>
                <value>
                    <fullName>MV Joints H/S</fullName>
                </value>
                <value>
                    <fullName>MV Terminations C/A</fullName>
                </value>
                <value>
                    <fullName>MV Joints C/A</fullName>
                </value>
                <value>
                    <fullName>LV H/S</fullName>
                </value>
                <value>
                    <fullName>Switchgear Connect</fullName>
                </value>
                <value>
                    <fullName>Nuclear Products</fullName>
                </value>
                <value>
                    <fullName>Simel Distribution (LV&amp;MV)</fullName>
                </value>
                <value>
                    <fullName>AMPACT</fullName>
                </value>
                <value>
                    <fullName>New Product C&amp;F</fullName>
                </value>
                <value>
                    <fullName>Insulators MV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RESPONSIBLE_DESIGN_OWNER_CDE__c</fullName>
        <description>RESPONSIBLE_DESIGN_OWNER_CDE</description>
        <label>Responsible Design Owner Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Price__c</fullName>
        <description>RSM Price is only visible to Pricing Manager - AMR and will be included in the email templates</description>
        <label>RSM Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SALES_INTENT_CDE__c</fullName>
        <label>Sales Intent Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHIPPER_PACKAGING_QTY__c</fullName>
        <label>Shipper Packaging Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHIPPER_PACKAGING_TYPE_CDE__c</fullName>
        <label>Shipper Packaging Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STANDARD_PACKAGING_QTY__c</fullName>
        <label>Standard Packaging Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS_CDE__c</fullName>
        <label>Status Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Price__c</fullName>
        <label>Standard Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <label>Standard Cost</label>
        <precision>17</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNIT_PACKAGING_QTY__c</fullName>
        <label>Unit Packaging Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNIT_PACKAGING_TYPE_CDE__c</fullName>
        <label>Unit Packaging Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>